tab card animate adding

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="tab-pane container active" id="allproject">
                 <div class="row">
                     <div class="col-12 col-sm-6 col-lg-4 my-3">
-                        <div class="card">
+                        <div class="card animate__animated animate__zoomIn">
                             <img class="card-img-top" src="./images/g1.jpg" alt="">
                             <div class="card-body">
                                 <h4 class="card-title">Apologetic robot holding flowers</h4>
@@ -143,7 +143,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4 my-3">
-                        <div class="card">
+                        <div class="card animate__animated animate__zoomIn">
                             <img class="card-img-top" src="./images/g2.jpg" alt="">
                             <div class="card-body">
                                 <h4 class="card-title">Woman walking her small dog</h4>
@@ -152,7 +152,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4 my-3">
-                        <div class="card">
+                        <div class="card animate__animated animate__zoomIn">
                             <img class="card-img-top" src="./images/g3.jpg" alt="">
                             <div class="card-body">
                                 <h4 class="card-title">Oil bottle branding</h4>
@@ -161,7 +161,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4 my-3">
-                        <div class="card">
+                        <div class="card animate__animated animate__zoomIn">
                             <img class="card-img-top" src="./images/g4.jpg" alt="">
                             <div class="card-body">
                                 <h4 class="card-title">Smiling Woman</h4>
@@ -170,7 +170,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4 my-3">
-                        <div class="card">
+                        <div class="card animate__animated animate__zoomIn">
                             <img class="card-img-top" src="./images/g5.jpg" alt="">
                             <div class="card-body">
                                 <h4 class="card-title">Drink can design</h4>
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4 my-3">
-                        <div class="card">
+                        <div class="card animate__animated animate__zoomIn">
                             <img class="card-img-top" src="./images/g6.jpg" alt="">
                             <div class="card-body">
                                 <h4 class="card-title">I love you hand gesture</h4>
@@ -192,7 +192,7 @@
             <div class="tab-pane container fade" id="illustration">
                 <div class="row">
                     <div class="col-12 col-sm-6 col-lg-4 my-3">
-                        <div class="card">
+                        <div class="card animate__animated animate__zoomIn">
                             <img class="card-img-top" src="./images/g1.jpg" alt="">
                             <div class="card-body">
                                 <h4 class="card-title">Apologetic robot holding flowers</h4>
@@ -201,7 +201,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4 my-3">
-                        <div class="card">
+                        <div class="card animate__animated animate__zoomIn">
                             <img class="card-img-top" src="./images/g2.jpg" alt="">
                             <div class="card-body">
                                 <h4 class="card-title">Woman walking her small dog</h4>
@@ -210,7 +210,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4 my-3">
-                        <div class="card">
+                        <div class="card animate__animated animate__zoomIn">
                             <img class="card-img-top" src="./images/g3.jpg" alt="">
                             <div class="card-body">
                                 <h4 class="card-title">Oil bottle branding</h4>
@@ -223,7 +223,7 @@
             <div class="tab-pane container fade" id="photography">
                 <div class="row">
                     <div class="col-12 col-sm-6 col-lg-4 my-3">
-                        <div class="card">
+                        <div class="card animate__animated animate__zoomIn">
                             <img class="card-img-top" src="./images/g3.jpg" alt="">
                             <div class="card-body">
                                 <h4 class="card-title">Oil bottle branding</h4>
@@ -232,7 +232,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4 my-3">
-                        <div class="card">
+                        <div class="card animate__animated animate__zoomIn">
                             <img class="card-img-top" src="./images/g4.jpg" alt="">
                             <div class="card-body">
                                 <h4 class="card-title">Smiling Woman</h4>
@@ -245,7 +245,7 @@
             <div class="tab-pane container fade" id="website">
                 <div class="row">
                     <div class="col-12 col-sm-6 col-lg-4 my-3">
-                        <div class="card">
+                        <div class="card animate__animated animate__zoomIn">
                             <img class="card-img-top" src="./images/g6.jpg" alt="">
                             <div class="card-body">
                                 <h4 class="card-title">I love you hand gesture</h4>
