award by Kleiza

--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- Animate.CSS -->
-    <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <!-- Style css -->
     <link rel="stylesheet" href="./css/style.css" />
@@ -81,7 +78,8 @@
                         <img class="img-fluid" src="./images/01-3.jpg" />
                     </div>
                     <h3 class="animate__animated animate__fadeInUp animate__delay-1s">Our goals. Our mission.</h3>
-                    <p class="animate__animated animate__fadeInUp animate__delay-2s">How we help other companies to grow.</p>
+                    <p class="animate__animated animate__fadeInUp animate__delay-2s">How we help other companies to
+                        grow.</p>
                 </div>
             </div>
             <div class="carousel-item">
@@ -90,7 +88,8 @@
                         <img class="img-fluid" src="./images/02-3.jpg" />
                     </div>
                     <h3 class="animate__animated animate__fadeInUp animate__delay-1s">Our goals. Our mission.</h3>
-                    <p class="animate__animated animate__fadeInUp animate__delay-2s">How we help other companies to grow.</p>
+                    <p class="animate__animated animate__fadeInUp animate__delay-2s">How we help other companies to
+                        grow.</p>
                 </div>
             </div>
             <div class="carousel-item">
@@ -99,7 +98,8 @@
                         <img class="img-fluid" src="./images/03-3.jpg" />
                     </div>
                     <h3 class="animate__animated animate__fadeInUp animate__delay-1s">Our goals. Our mission.</h3>
-                    <p class="animate__animated animate__fadeInUp animate__delay-2s">How we help other companies to grow.</p>
+                    <p class="animate__animated animate__fadeInUp animate__delay-2s">How we help other companies to
+                        grow.</p>
                 </div>
             </div>
         </div>
@@ -275,8 +275,8 @@
                             <div class="card-body text-center">
                                 <i class="fa fa-paint-brush"></i>
                                 <h4 class="card-title">Design</h4>
-                                <p class="card-text">Vestibulum ante ipsum primis in faucibus orci luctus 
-                                    et ultrices posuere cubilia Curae; 
+                                <p class="card-text">Vestibulum ante ipsum primis in faucibus orci luctus
+                                    et ultrices posuere cubilia Curae;
                                     Nulla mollis dapibus nunc
                                 </p>
                             </div>
@@ -287,8 +287,8 @@
                             <div class="card-body text-center">
                                 <i class="fa fa-shekel-sign"></i>
                                 <h4 class="card-title">Marketing</h4>
-                                <p class="card-text">Vestibulum ante ipsum primis in faucibus orci luctus 
-                                    et ultrices posuere cubilia Curae; 
+                                <p class="card-text">Vestibulum ante ipsum primis in faucibus orci luctus
+                                    et ultrices posuere cubilia Curae;
                                     Nulla mollis dapibus nunc
                                 </p>
                             </div>
@@ -299,8 +299,8 @@
                             <div class="card-body text-center">
                                 <i class="fa fa-camera"></i>
                                 <h4 class="card-title">Photography</h4>
-                                <p class="card-text">Vestibulum ante ipsum primis in faucibus orci luctus 
-                                    et ultrices posuere cubilia Curae; 
+                                <p class="card-text">Vestibulum ante ipsum primis in faucibus orci luctus
+                                    et ultrices posuere cubilia Curae;
                                     Nulla mollis dapibus nunc
                                 </p>
                             </div>
@@ -311,6 +311,32 @@
 
         </div>
     </section>
+
+    <!-- Achievement and award -->
+
+    <section id="award">
+        <div class="award__bg"></div>
+        <div class="container">
+            <div class="award__left">
+                <div class="award__card">
+                    <h3>Our Achievement and Award</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                </div>
+            </div>
+            <div class="award__right">
+                <p></p>
+                <div class="award__partner">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
 
 
