footer by Phong

--- a/index.html
+++ b/index.html
@@ -312,7 +312,16 @@
         </div>
     </section>
 
+    <!-- footer -->
 
+    <section id="footer">
+        <div class="footer__icon">
+
+        </div>
+        <div class="footer__copyright">
+            <p>© 2021 CyberPortfolio. All rights reserved | Designed by CyberSoft</p>
+        </div>
+    </section>
 
 
 
