--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- LINE FONT AWESOME     -->
+    <link rel="stylesheet"
+        href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 
     <!-- Animate.CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -313,34 +317,89 @@
     </section>
 
     <!-- Achievement and award -->
-
-    <section id="award">
+    <section id="award" class="py-5">
         <div class="award__bg"></div>
         <div class="container">
-            <div class="award__left">
-                <div class="award__card">
-                    <h3>Our Achievement and Award</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+            <div class="row">
+                <div class="col-12 col-sm-5 col-lg-5 my-6">
+                    <div class="award__left">
+                        <h3>Our Achievement and Award</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec
+                            ullamcorper
+                            mattis, pulvinar dapibus leo.
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class="award__right">
-                <p></p>
-                <div class="award__partner">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
+                <div class="col-12 col-sm-7 col-lg-7 my-6">
+                    <div class="award__right">
+                        <p>Luctus porta semper aptent morbi. Vestibulum lectus tempus augue dictumst enim commodo
+                            facilisis.
+                            Mus laoreet scelerisque habitant urna dui sem diam. Purus dis nam eget. Scelerisque placerat
+                            lectus lorem etiam.
+                            Elementum integer phasellus lectus.
+                        </p>
+                        <div class="award__partner">
+                            <div class="row">
+                                <div class="col">
+                                    <img src="./images/award-1.png" class="img-fluid" alt="">
+                                </div>
+                                <div class="col">
+                                    <img src="./images/award-2.png" class="img-fluid" alt="">
+                                </div>
+                                <div class="col">
+                                    <img src="./images/award-3.png" class="img-fluid" alt="">
+                                </div>
+                                <div class="col">
+                                    <img src="./images/award-4.png" class="img-fluid" alt="">
+                                </div>
+                                <div class="col">
+                                    <img src="./images/award-5.png" class="img-fluid" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-
-
-
-
-
+    <!-- footer -->
+    <section id="footer">
+        <div class="container text-center">
+            <div class="footer__content">
+                <div class="footer__icon">
+                    <a href="#">
+                        <i class="lab la-facebook-f"></i>
+                    </a>
+                </div>
+                <div class="footer__icon">
+                    <a href="#">
+                        <i class="lab la-twitter"></i>
+                    </a>
+                </div>
+                <div class="footer__icon">
+                    <a href="#">
+                        <i class="lab la-instagram"></i>
+                    </a>
+                </div>
+                <div class="footer__icon">
+                    <a href="#">
+                        <i class="lab la-google-plus-g"></i>
+                    </a>
+                </div>
+                <div class="footer__icon">
+                    <a href="#">
+                        <i class="lab la-linkedin-in"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="footer__copyright">
+                <p>© 2021 CyberPortfolio. All rights reserved | Designed by 
+                    <span><a href="#">CyberSoft</a></span>
+                </p>
+            </div>
+        </div>
+    </section>
 
 
     <!-- Optional JavaScript -->
